Complete another kata

--- a/path_finder/CMakeLists.txt
+++ b/path_finder/CMakeLists.txt
@@ -4,3 +4,6 @@ project(path_finder)
 
 add_executable(${PROJECT_NAME}_reachable reachable.cpp)
 target_link_libraries(${PROJECT_NAME}_reachable gtest_main)
+
+add_executable(${PROJECT_NAME}_minimal_step minimal_step.cpp)
+target_link_libraries(${PROJECT_NAME}_minimal_step gtest_main)
