--- a/path_finder/CMakeLists.txt
+++ b/path_finder/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(${PROJECT_NAME}_reachable gtest_main)
 
 add_executable(${PROJECT_NAME}_minimal_step minimal_step.cpp)
 target_link_libraries(${PROJECT_NAME}_minimal_step gtest_main)
+
+add_executable(${PROJECT_NAME}_the_alpinist the_alpinist.cpp)
+target_link_libraries(${PROJECT_NAME}_the_alpinist gtest_main)
