--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_subdirectory(sum_of_intervals)
 add_subdirectory(become_immortal)
 add_subdirectory(smallest_possible_sum)
 add_subdirectory(last_digit_of_a_huge_number)
+add_subdirectory(add_big_numbers)
 
 add_executable(cpp_workout src/stray_number.cpp src/roman_decoder.cpp src/two_sum.cpp src/camel_string.cpp src/score_a_dice.cpp src/pascal_triangle.cpp src/max_sum.cpp src/scarmblies_string.cpp src/best_travel.cpp src/premutation_string.cpp src/parse_int.cpp src/multiply_string_number.cpp src/string_mix.cpp src/twice_linear.cpp src/explorsive_sum.cpp src/observed_pin.cpp src/multiplication_of_three.cpp src/sudoku_validator.cpp src/pi_comp.cpp)
 target_include_directories(cpp_workout PUBLIC include)
